Report Abuse on mobile should not have a fixed height for form

--- a/hearth/media/css/form-modal.styl
+++ b/hearth/media/css/form-modal.styl
@@ -39,8 +39,13 @@
     }
 }
 
-.main:not(.modal) .btn-cancel {
-    display: none;
+.main:not(.modal) {
+    .form-modal {
+        min-height: inherit;
+    }
+    .btn-cancel {
+        display: none;
+    }
 }
 
 @media $at-least-desktop {
